--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
   },
   "homepage": "https://github.com/squer-solutions/gatsby-open-graph-images#readme",
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "@babel/runtime": "^7.10.2",
     "express": "^4.17.1",
     "puppeteer": "^3.3.0"
   }
