--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "gatsby-plugin-open-graph-images",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Build dynamic open-graph preview images for gatsby pages. Simply use react components to create SEO ready preview images for Twitter, Facebook, Linkedin, Google, and many more.",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write ."
+    "ci": "echo 'nothing to do'",
+    "format": "prettier --write .",
+    "lint": "prettier --check ."
   },
   "repository": {
     "type": "git",
